# lesson-scheduler-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: basic.yml
lesson_scheduler_api/: manage.py
lesson_scheduler_api/core/: middleware.py  routes.py  serializers.py
lesson_scheduler_api/core/migrations/: 0001_initial.py  0002_alter_booking_lesson.py
lesson_scheduler_api/core/models/: __init__.py  booking.py
lesson_scheduler_api/core/tests/: tests.py
lesson_scheduler_api/core/views/: __init__.py  booking.py  user.py
lesson_scheduler_api/dashboard/: settings.py  urls.py
lesson_scheduler_api/scripts/: populate_db.py
lesson_scheduler_api/user/: serealizer.py
lesson_scheduler_api/user/models/: user.py
